<resources>
    <string name="app_name">SearchFil_9_2</string>
    <string name="link">Картинки взяты с https://www.movieposters.com</string>
    <string name="b_menu">МЕНЮ</string>
    <string name="b_fav">ИЗБРАННОЕ</string>
    <string name="b_watch_later">ПОСМОТРЕТЬ ПОЗЖЕ</string>
    <string name="b_selections">ПОДБОРКИ</string>
    <string name="b_setting">НАСТРОЙКИ</string>

    <string name="menu_favorites_title">избранное</string>
    <string name="menu_watch_later_title">смотреть позже</string>
    <string name="menu_selections_title">выбрать</string>
    <string name="menu_settings_title">настройки</string>
    <string name="page_title">Search it!</string>
</resources>